OK finetuning setups now

--- a/_notebooks/2020-02-29-Buzz-Aldrin's-average-altitude.ipynb
+++ b/_notebooks/2020-02-29-Buzz-Aldrin's-average-altitude.ipynb
@@ -1,12 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Buzz Aldrin's lifetime mean altitude\n",
-    "\n",
-    "I mean obviously we want him to stick around as long as possible, but he is ruining his lifetime average with his longevity ;)"
+    "# \"Buzz Aldrin's lifetime mean altitude\"\n",
+    "> \"I mean obviously we want him to stick around as long as possible, but he is ruining his lifetime average with his longevity ;)\"\n",
+    "- toc: false\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [funny, jupyter, xkcd]\n",
+    "- hide: false    "
    ]
   },
   {
